==> dxbsw/Balanced_Beacon_Smart_Car/APP/LQ_MotorServo.c <==
#include "include.h"
#define MOTOR_FREQUENCY    PWM_DUTY_MAX
#define USEDRV8701

void MotorInit(u16 freq)
{
  PIN_InitConfig(PC6, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC7, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC8, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC9, GPO, 1,GPIO_Mode_Out_PP);
  
  PIN_InitConfig(PG6, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PG7, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PG8, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PG5, GPO, 1,GPIO_Mode_Out_PP);
  
  PWM_InitConfig(PWM8_CH1_PC6,freq, 0);
  PWM_InitConfig(PWM8_CH3_PC8,freq, 0);
  
  PidInit(&pid1);
  PidInit(&pid2);
  PidInit(&pid3);
  PidInit(&pid4);
  /* PID 参数需要自行调节 */
  pid1.kp = 150;
  pid1.ki = 5;
  
  pid2.kp = 150;
  pid2.ki = 5;
  
  pid3.kp = 150;
  pid3.ki = 5;
  
  pid4.kp = 150;
  pid4.ki = 5;
}

void MotorCtrl4w(int16_t motor1, int16_t motor2,int16_t motor3, int16_t motor4)
{
  //assert(motor1>TIM3_PWM_DUTY_MAX);
  //assert(motor2>TIM3_PWM_DUTY_MAX);
  //assert(motor3>TIM3_PWM_DUTY_MAX);
  //assert(motor4>TIM3_PWM_DUTY_MAX);
  
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM8_CH1_PC6,motor1);	     //C6
    GPIO_ResetBits(MTGPIO1p);    //G5
  }
  else
  {
    PWM_Set_Duty(PWM8_CH1_PC6,MOTOR_FREQUENCY+motor1);
    GPIO_SetBits(MTGPIO1p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM8_CH2_PC7,motor2);	    //C7
    GPIO_ResetBits(MTGPIO2p);   //G6	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH2_PC7,MOTOR_FREQUENCY+motor2);
    GPIO_SetBits(MTGPIO2p);
  }
  
  if (motor3 > 0)
  {
    PWM_Set_Duty(PWM8_CH3_PC8,motor3);	  //C8
    GPIO_ResetBits(MTGPIO3p); //G7	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH3_PC8,MOTOR_FREQUENCY+motor3);
    GPIO_SetBits(MTGPIO3p);
  }
  
  if (motor4 > 0)
  {
    PWM_Set_Duty(PWM8_CH4_PC9,motor4);	 //C9
    GPIO_ResetBits(MTGPIO4p);//C8	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH4_PC9,MOTOR_FREQUENCY+motor4);
    GPIO_SetBits(MTGPIO4p);
  }
}

void MotorCtrl(int16_t motor1, int16_t motor2)
{
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM8_CH1_PC6,motor1);	     //C6
    GPIO_ResetBits(MTGPIO1p);    //G5
  }
  else
  {
    PWM_Set_Duty(PWM8_CH1_PC6,MOTOR_FREQUENCY+motor1);
    GPIO_SetBits(MTGPIO1p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM8_CH2_PC7,motor2);	    //C7
    GPIO_ResetBits(MTGPIO2p);   //G6	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH2_PC7,MOTOR_FREQUENCY+motor2);
    GPIO_SetBits(MTGPIO2p);
  }
  

}

void MotorCtrl4w(int16_t motor1, int16_t motor2,int16_t motor3, int16_t motor4)
{  
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM8_CH1_PC6,motor1);	    //C6
    GPIO_ResetBits(MTGPIO1p);   //G5	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH1_PC6,0-motor1);
    GPIO_SetBits(MTGPIO1p);
  }
  
 if (motor2 > 0)
  {
    PWM_Set_Duty(PWM8_CH2_PC7,motor2);	 //C7
    GPIO_ResetBits(MTGPIO2p);//G6	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH2_PC7,0-motor2);
    GPIO_SetBits(MTGPIO2p);
  }
  
    if (motor3 > 0)
  {
    PWM_Set_Duty(PWM8_CH3_PC8,motor3);	     //C8
    GPIO_ResetBits(MTGPIO3p);    //G7
  }
  else
  {
    PWM_Set_Duty(PWM8_CH3_PC8,0-motor3);
    GPIO_SetBits(MTGPIO3p);
  }
  if (motor4 > 0)
  {
    PWM_Set_Duty(PWM8_CH4_PC9,motor4);	  //C9
    GPIO_ResetBits(MTGPIO4p); //G8	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH4_PC9,0-motor4);
    GPIO_SetBits(MTGPIO4p);
  }  

}

void MotorCtrl(int16_t motor1, int16_t motor2)
{
    if (motor1 > 0)
  {
    PWM_Set_Duty(PWM8_CH3_PC8,motor1);	     //C8
    GPIO_ResetBits(MTGPIO3p);    //G7
  }
  else
  {
    PWM_Set_Duty(PWM8_CH3_PC8,0-motor1);
    GPIO_SetBits(MTGPIO3p);
  }
   if (motor2 > 0)
  {
    PWM_Set_Duty(PWM8_CH4_PC9,motor2);	  //C9
    GPIO_ResetBits(MTGPIO4p); //G8	
  }
  else
  {
    PWM_Set_Duty(PWM8_CH4_PC9,0-motor2);
    GPIO_SetBits(MTGPIO4p);
  }
}

void TestMotor (void)
{
  int16_t duty = 1500;
  char txt[16];
  
  TFTSPI_Init(1);        //LCD初始化  0:横屏  1：竖屏
  TFTSPI_CLS(u16BLUE);          //清屏
  TFTSPI_P8X16Str(2, 0, "LQ Motor Test", u16RED, u16BLUE);
  MotorInit(12500);
  while (1)
  {
    if (KEY_Read(KEY0) == 0)      //按下KEY0键，占空比减小
    {
      if (duty > -PWM_DUTY_MAX)
        duty -= 500;
    }
    if (KEY_Read(KEY2) == 0)      //按下KEY2键，占空比加大
    {
      if (duty < PWM_DUTY_MAX) //满占空比为10000
        duty += 500;
    }
    if (KEY_Read(KEY1) == 0)      //按下KEY1键，占空比中值
    {
      duty = 1500;
    }
    
    // MotorCtrl(duty, duty);
    MotorCtrl4w(duty, duty, duty, duty);
    
    sprintf(txt, "PWM: %05d;", duty);
    TFTSPI_P8X16Str(0, 5, txt, u16WHITE, u16BLACK);       //字符串显示   
    
    LED_Ctrl(LED1, RVS);       //电平翻转,LED闪烁
    delayms(200);              //延时等待
  }
}

void ServoInit(u16 freq)
{
  PWM_InitConfig(PWM5_CH1_PA0, 100, 1500);  //舵机默认用的是A0口，TIM5定时器
  PWM_InitConfig(PWM5_CH2_PA1, 100, 1500);  //舵机默认用的是A1口，TIM5定时器
}

void ServoCtrl (uint16_t duty)
{
  /*
  if (duty >= Servo_Left_Max)                  //限制幅值
  duty = Servo_Left_Max;
  else if (duty <= Servo_Right_Min)            //限制幅值
  duty = Servo_Right_Min;
  */
  PWM_Set_Duty(PWM5_CH1_PA0,duty);//A0;	
  PWM_Set_Duty(PWM5_CH2_PA1,duty); //　A1
}
